--- a/_posts/2020-01-01-jieshao.md
+++ b/_posts/2020-01-01-jieshao.md
@@ -9,28 +9,27 @@ toc: true
 pinned: true
 ---
  
-**姓名：**阿岁
+**姓名：**亖岁
 
-**性别：**无
+**性别：**████
 
 
     ddlc/dl/黑塔利亚/hp/东方
 
-    又名亖叶，可以叫我y
+    又名阿岁，可以叫我y
 
-平平无奇学生党  
-主业学习，业余画画写文  
-自来熟的一个怂货，懒癌晚期的死宅  
+* 平平无奇学生党  
+* 主业学习，业余画画写文  
+* 自来熟的一个怂货，懒癌晚期的死宅  
 和谁都聊得来       
+* 爱好多变  
  * * * * * 
 
 ## 用途
 
-这个博客纯粹是用来存放摸鱼写文和废话之类的东西
-
-跟个垃圾堆一样
-
-<span style="text-decoration:line-through;">什么，这不就是垃圾堆吗
+这个博客纯粹是用来存放摸鱼写文和废话之类的东西  
+跟个垃圾堆一样  
+<span style="text-decoration:line-through;">什么，这不就是垃圾堆吗</span>
 * * * * * 
 ## 致谢
 
